fix(ui): Set a max height on the assign to user dropdown
Set max height of 400px to prevent this from getting too long in large teams.
Fixes #2198

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1952,9 +1952,8 @@ ul.faces {
 
     ul {
       .list-unstyled();
-      max-height: 180px;
-      overflow: auto;
-      margin: 0;
+      max-height: 400px;
+      overflow-y: scroll;
     }
 
     li {
